--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>[insert name] Portifolio</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>[insert name] Portifolio</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-
-  <script src="script.js"></script>
+	<h1>Hello, my name is Chang Wang.</h1>
+	<script src="script.js"></script>
 </body>
 
 </html>
-
