Edit Portfolio Description

--- a/index.html
+++ b/index.html
@@ -145,10 +145,7 @@
 					<img src="images/work-1.png" alt="Portfolio Image">
 					<div class="layer">
 						<h3>Authentication App</h3>
-						<p class="work-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus
-							nostrum, odio numquam
-							culpa, mollitia veniam reiciendis nihil dolorum quam a provident nesciunt officia aliquam
-							reprehenderit cumque tempora illum possimus aut?</p>
+						<p class="work-desc">This is an authentication app where you get to toggle between login and sign up.</p>
 						<a href="https://authentication-app-compulsory-ngenchangwang.online-full-time-bootcamp.repl.co/"
 							target="_blank"><i class="fas fa-external-link-alt"></i></a>
 					</div>
@@ -157,10 +154,7 @@
 					<img src="images/work-2.png" alt="Portfolio Image">
 					<div class="layer">
 						<h3>Translator App</h3>
-						<p class="work-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia deserunt
-							tempore, sequi
-							sint laboriosam sed illo rem accusamus sunt esse? Nulla dolore ab praesentium eum eaque quis
-							blanditiis commodi quae?</p>
+						<p class="work-desc">This is a translator app where you get a word and translate to the language you choose.</p>
 						<a href="https://translator-app-compulsory-ngenchangwang.online-full-time-bootcamp.repl.co/"
 							target="_blank"><i class="fas fa-external-link-alt"></i></a>
 					</div>
@@ -169,10 +163,7 @@
 					<img src="images/work-3.png" alt="Portfolio Image">
 					<div class="layer">
 						<h3>Movie App</h3>
-						<p class="work-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi libero
-							facere sapiente ipsa
-							repudiandae magnam totam excepturi dolorem consequuntur perspiciatis eaque optio a molestias
-							nostrum dolores, voluptatum neque minima reprehenderit?</p>
+						<p class="work-desc">This is a movie app where user can search for the movie by entering the movie title.</p>
 						<a href="https://movie-app-optional-ngenchangwang.online-full-time-bootcamp.repl.co/"
 							target="_blank"><i class="fas fa-external-link-alt"></i></a>
 					</div>
