Edit Contact-Left Section

--- a/index.html
+++ b/index.html
@@ -179,12 +179,14 @@
 			<div class="row">
 				<div class="contact-left">
 					<h1 class="sub-title">Contact Me</h1>
-					<p><i class="fas fa-paper-plane"></i> ngenchangwang@gmail.com</p>
-					<p><i class="fas fa-phone-square-alt"></i> +6017-2321386</p>
+					<p><a href="mailto:ngenchangwang@gmail.com" target="_blank"><i class="fas fa-paper-plane"></i> ngenchangwang@gmail.com</a></p>
+					<p><a href="https://wa.me/60172321386?text=Hi,%20Chang%20Wang!" target="_blank"><i class="fas fa-phone-square-alt"></i> +6017-2321386</a></p>
 					<div class="social-icons">
 						<a href="https://www.facebook.com/NgenChangWang" class="fab fa-facebook" target="_blank"></a>
 						<a href="https://www.instagram.com/ngenchangwang/" class="fab fa-instagram" target="_blank"></a>
 						<a href="https://www.linkedin.com/in/chang-wang-ngen/" class="fab fa-linkedin"
+							target="_blank"></a>
+						<a href="https://github.com/NCW1" class="fab fa-github"
 							target="_blank"></a>
 						<a href="https://twitter.com/NgenChangWang" class="fab fa-twitter-square" target="_blank"></a>
 					</div>
