--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
 					<img src="images/work-1.png" alt="Portfolio Image">
 					<div class="layer">
 						<h3>Authentication App</h3>
-						<p class="work-desc">This is an authentication app where you get to toggle between login and sign up.</p>
+						<p class="work-desc">This is an authentication app where you get to toggle between login and
+							sign up.</p>
 						<a href="https://authentication-app-compulsory-ngenchangwang.online-full-time-bootcamp.repl.co/"
 							target="_blank"><i class="fas fa-external-link-alt"></i></a>
 					</div>
@@ -154,7 +155,8 @@
 					<img src="images/work-2.png" alt="Portfolio Image">
 					<div class="layer">
 						<h3>Translator App</h3>
-						<p class="work-desc">This is a translator app where you get a word and translate to the language you choose.</p>
+						<p class="work-desc">This is a translator app where you get a word and translate to the language
+							you choose.</p>
 						<a href="https://translator-app-compulsory-ngenchangwang.online-full-time-bootcamp.repl.co/"
 							target="_blank"><i class="fas fa-external-link-alt"></i></a>
 					</div>
@@ -163,7 +165,8 @@
 					<img src="images/work-3.png" alt="Portfolio Image">
 					<div class="layer">
 						<h3>Movie App</h3>
-						<p class="work-desc">This is a movie app where user can search for the movie by entering the movie title.</p>
+						<p class="work-desc">This is a movie app where user can search for the movie by entering the
+							movie title.</p>
 						<a href="https://movie-app-optional-ngenchangwang.online-full-time-bootcamp.repl.co/"
 							target="_blank"><i class="fas fa-external-link-alt"></i></a>
 					</div>
@@ -179,26 +182,28 @@
 			<div class="row">
 				<div class="contact-left">
 					<h1 class="sub-title">Contact Me</h1>
-					<p><a href="mailto:ngenchangwang@gmail.com" target="_blank"><i class="fas fa-paper-plane"></i> ngenchangwang@gmail.com</a></p>
-					<p><a href="https://wa.me/60172321386?text=Hi,%20Chang%20Wang!" target="_blank"><i class="fas fa-phone-square-alt"></i> +6017-2321386</a></p>
+					<p><a href="mailto:ngenchangwang@gmail.com" target="_blank"><i class="fas fa-paper-plane"></i>
+							ngenchangwang@gmail.com</a></p>
+					<p><a href="https://wa.me/60172321386?text=Hi,%20Chang%20Wang!" target="_blank"><i
+								class="fas fa-phone-square-alt"></i> +6017-2321386</a></p>
 					<div class="social-icons">
 						<a href="https://www.facebook.com/NgenChangWang" class="fab fa-facebook" target="_blank"></a>
 						<a href="https://www.instagram.com/ngenchangwang/" class="fab fa-instagram" target="_blank"></a>
 						<a href="https://www.linkedin.com/in/chang-wang-ngen/" class="fab fa-linkedin"
 							target="_blank"></a>
-						<a href="https://github.com/NCW1" class="fab fa-github"
-							target="_blank"></a>
+						<a href="https://github.com/NCW1" class="fab fa-github" target="_blank"></a>
 						<a href="https://twitter.com/NgenChangWang" class="fab fa-twitter-square" target="_blank"></a>
 					</div>
 					<a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
 				</div>
 				<div class="contact-right">
-					<form>
-						<input type="text" name="name" placeholder="Enter Your Name" required>
-						<input type="email" name="email" placeholder="Enter Your E-mail" required>
-						<textarea name="message" rows="6" placeholder="Enter Your Message"></textarea>
+					<form name="submit-to-google-sheet">
+						<input type="text" name="Name" placeholder="Enter Your Name" required>
+						<input type="email" name="Email" placeholder="Enter Your E-mail" required>
+						<textarea name="Message" rows="6" placeholder="Enter Your Message"></textarea>
 						<button type="submit" class="btn btn2">Submit</button>
 					</form>
+					<span id="msg"></span>
 				</div>
 			</div>
 		</div>
