Make the "View More" button functional

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 								& Back-End Technologies.</li>
 							<li><span>Front-End Web Development</span><br>HTML, CSS, Bootstrap, JavaScript, React
 							</li>
-							<li><span>Back-End Web Development</span><br>SQL, Express, Firebase</li>
+							<li><span>Back-End Web Development</span><br>Node.js, SQL, Express, Firebase</li>
 						</ul>
 					</div>
 					<div class="tab-contents" id="experience">
@@ -171,8 +171,37 @@
 							target="_blank"><i class="fas fa-external-link-alt"></i></a>
 					</div>
 				</div>
+				<div class="work additional">
+					<img src="images/work-1.png" alt="Portfolio Image">
+					<div class="layer">
+						<h3>Family App</h3>
+						<p class="work-desc">This is a family app where you enter your family member's name, age, and
+							gender. You can also increment their age and change their name.</p>
+						<a href="https://family-app-compulsory-ngenchangwang.online-full-time-bootcamp.repl.co/"
+							target="_blank"><i class="fas fa-external-link-alt"></i></a>
+					</div>
+				</div>
+				<div class="work additional">
+					<img src="images/work-2.png" alt="Portfolio Image">
+					<div class="layer">
+						<h3>Student List App</h3>
+						<p class="work-desc">This is a student list app to add students and their marks.</p>
+						<a href="https://student-list-compulsory-ngenchangwang.online-full-time-bootcamp.repl.co/"
+							target="_blank"><i class="fas fa-external-link-alt"></i></a>
+					</div>
+				</div>
+				<div class="work additional">
+					<img src="images/work-3.png" alt="Portfolio Image">
+					<div class="layer">
+						<h3>Quiz App</h3>
+						<p class="work-desc">This is a quiz app, where you go through a list of questions. At the end of
+							the quiz, you will get your final score.</p>
+						<a href="https://better-quiz-app-optional-ngenchangwang.online-full-time-bootcamp.repl.co/"
+							target="_blank"><i class="fas fa-external-link-alt"></i></a>
+					</div>
+				</div>
 			</div>
-			<a href="#" class="btn">View More</a>
+			<a class="btn" onclick="showAdditionalProjects()">View More</a>
 		</div>
 	</div>
 
