Add WhatsApp's click to chat feature to WhatsApp icon

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<div class="tab-contents active-tab" id="skills">
 						<ul>
 							<li><span>Full-Stack Web Development</span><br>Develop Web Applications using Front-End
-								& Back-End Technologies.</li>
+								& Back-End Technologies</li>
 							<li><span>Front-End Web Development</span><br>HTML, CSS, Bootstrap, JavaScript, React
 							</li>
 							<li><span>Back-End Web Development</span><br>Node.js, SQL, Express, Firebase</li>
@@ -216,6 +216,7 @@
 					<p><a href="https://wa.me/60172321386?text=Hi,%20Chang%20Wang!" target="_blank"><i
 								class="fas fa-phone-square-alt"></i> +6017-2321386</a></p>
 					<div class="social-icons">
+						<a href="https://wa.me/60172321386?text=Hi,%20Chang%20Wang!" class="fab fa-whatsapp" target="_blank"></a>
 						<a href="https://www.facebook.com/NgenChangWang" class="fab fa-facebook" target="_blank"></a>
 						<a href="https://www.instagram.com/ngenchangwang/" class="fab fa-instagram" target="_blank"></a>
 						<a href="https://www.linkedin.com/in/chang-wang-ngen/" class="fab fa-linkedin"
