Add more projects to the portfolio section

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 					<img src="images/work-1.png" alt="Portfolio Image">
 					<div class="layer">
 						<h3>Authentication App</h3>
-						<p class="work-desc">This is an authentication app where you get to toggle between login and
+						<p class="work-desc">This is an authentication app that allows users to toggle between login and
 							sign up.</p>
 						<a href="https://authentication-app-compulsory-ngenchangwang.online-full-time-bootcamp.repl.co/"
 							target="_blank"><i class="fas fa-external-link-alt"></i></a>
@@ -154,49 +154,46 @@
 				<div class="work">
 					<img src="images/work-2.png" alt="Portfolio Image">
 					<div class="layer">
-						<h3>Translator App</h3>
-						<p class="work-desc">This is a translator app where you get a word and translate to the language
-							you choose.</p>
-						<a href="https://translator-app-compulsory-ngenchangwang.online-full-time-bootcamp.repl.co/"
+						<h3>Movie App</h3>
+						<p class="work-desc">This is a movie app that allows users to search for a movie by entering the
+							movie title.</p>
+						<a href="https://movie-app-optional-ngenchangwang.online-full-time-bootcamp.repl.co/"
 							target="_blank"><i class="fas fa-external-link-alt"></i></a>
 					</div>
 				</div>
 				<div class="work">
 					<img src="images/work-3.png" alt="Portfolio Image">
 					<div class="layer">
-						<h3>Movie App</h3>
-						<p class="work-desc">This is a movie app where user can search for the movie by entering the
-							movie title.</p>
-						<a href="https://movie-app-optional-ngenchangwang.online-full-time-bootcamp.repl.co/"
+						<h3>Quiz App</h3>
+						<p class="work-desc">This is a quiz app that allows users to answer the questions and click a button to check their answers.</p>
+						<a href="https://quiz-app-compulsory-ngenchangwang.online-full-time-bootcamp.repl.co/"
 							target="_blank"><i class="fas fa-external-link-alt"></i></a>
 					</div>
 				</div>
 				<div class="work additional">
 					<img src="images/work-1.png" alt="Portfolio Image">
 					<div class="layer">
-						<h3>Family App</h3>
-						<p class="work-desc">This is a family app where you enter your family member's name, age, and
-							gender. You can also increment their age and change their name.</p>
-						<a href="https://family-app-compulsory-ngenchangwang.online-full-time-bootcamp.repl.co/"
+						<h3>Singapore Bus Arrival App</h3>
+						<p class="work-desc">This is a bus arrival app that allows users to view the bus timings at a bus stop.</p>
+						<a href="https://sg-bus-arrival-app-compulsory-ngenchangwang.online-full-time-bootcamp.repl.co/"
 							target="_blank"><i class="fas fa-external-link-alt"></i></a>
 					</div>
 				</div>
 				<div class="work additional">
 					<img src="images/work-2.png" alt="Portfolio Image">
 					<div class="layer">
-						<h3>Student List App</h3>
-						<p class="work-desc">This is a student list app to add students and their marks.</p>
-						<a href="https://student-list-compulsory-ngenchangwang.online-full-time-bootcamp.repl.co/"
+						<h3>To-Do List App</h3>
+						<p class="work-desc">This is a to-do list app that allows users to view a list of to-dos, and filter by user and filter by completed.</p>
+						<a href="https://todo-list-app-compulsory-ngenchangwang.online-full-time-bootcamp.repl.co/"
 							target="_blank"><i class="fas fa-external-link-alt"></i></a>
 					</div>
 				</div>
 				<div class="work additional">
 					<img src="images/work-3.png" alt="Portfolio Image">
 					<div class="layer">
-						<h3>Quiz App</h3>
-						<p class="work-desc">This is a quiz app, where you go through a list of questions. At the end of
-							the quiz, you will get your final score.</p>
-						<a href="https://better-quiz-app-optional-ngenchangwang.online-full-time-bootcamp.repl.co/"
+						<h3>Translator App</h3>
+						<p class="work-desc">This is a translator app that allows users to get a word and translate it to the language they choose.</p>
+						<a href="https://translator-app-compulsory-ngenchangwang.online-full-time-bootcamp.repl.co/"
 							target="_blank"><i class="fas fa-external-link-alt"></i></a>
 					</div>
 				</div>
