--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Chang Wang's Portfolio</title>
-	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+<link rel="manifest" href="favicon/site.webmanifest">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="script.js">
 	<script src="https://kit.fontawesome.com/d9248fe8bb.js" crossorigin="anonymous"></script>
